[gd_scene load_steps=49 format=3 uid="uid://b4uytwmkvsqi0"]

[ext_resource type="Script" path="res://pc.gd" id="1_x210m"]
[ext_resource type="Resource" uid="uid://d2uq12xuja7w8" path="res://DefaultMovementData.tres" id="2_4grev"]
[ext_resource type="Script" path="res://SMPC.gd" id="2_53mma"]
[ext_resource type="Texture2D" uid="uid://d2ggaktiv0hrj" path="res://knight.png" id="2_b7jgr"]
[ext_resource type="Texture2D" uid="uid://c74d14ub8w3oa" path="res://Art_Components/Shotgun/Escopeta.png" id="4_2ahp4"]
[ext_resource type="Script" path="res://Component/health.gd" id="4_q0gnn"]
[ext_resource type="Texture2D" uid="uid://dus86lxw4ytis" path="res://Art_Components/Shotgun/Efecto.png" id="5_pvc8c"]
[ext_resource type="Script" path="res://Component/hitbox_template.gd" id="6_y7jp7"]
[ext_resource type="Script" path="res://Component/parrybox_template.gd" id="8_7q1rp"]
[ext_resource type="Script" path="res://Component/hurtbox_template.gd" id="9_s8nmr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pue1l"]
resource_local_to_scene = true
size = Vector2(9.66933, 21.0727)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeqak"]
atlas = ExtResource("2_b7jgr")
region = Rect2(280, 270, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmjoh"]
atlas = ExtResource("2_b7jgr")
region = Rect2(490, 270, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiln0"]
atlas = ExtResource("2_b7jgr")
region = Rect2(420, 270, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_c56y6"]
atlas = ExtResource("2_b7jgr")
region = Rect2(350, 270, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsqh6"]
atlas = ExtResource("2_b7jgr")
region = Rect2(420, 270, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhrdx"]
atlas = ExtResource("2_b7jgr")
region = Rect2(490, 270, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g28x"]
atlas = ExtResource("2_b7jgr")
region = Rect2(350, 270, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncedy"]
atlas = ExtResource("2_b7jgr")
region = Rect2(0, 0, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_x44a2"]
atlas = ExtResource("2_b7jgr")
region = Rect2(280, 0, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlim1"]
atlas = ExtResource("2_b7jgr")
region = Rect2(0, 180, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vycf"]
atlas = ExtResource("2_b7jgr")
region = Rect2(420, 270, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvt1v"]
atlas = ExtResource("2_b7jgr")
region = Rect2(490, 270, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_72cx5"]
atlas = ExtResource("2_b7jgr")
region = Rect2(350, 270, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_b56c2"]
atlas = ExtResource("2_b7jgr")
region = Rect2(70, 180, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_52wv5"]
atlas = ExtResource("2_b7jgr")
region = Rect2(140, 180, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_3evuu"]
atlas = ExtResource("2_b7jgr")
region = Rect2(210, 180, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w7yb"]
atlas = ExtResource("2_b7jgr")
region = Rect2(280, 180, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qhjv"]
atlas = ExtResource("2_b7jgr")
region = Rect2(350, 180, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcon1"]
atlas = ExtResource("2_b7jgr")
region = Rect2(420, 180, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_meumu"]
atlas = ExtResource("2_b7jgr")
region = Rect2(490, 180, 70, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_4et6u"]
atlas = ExtResource("2_b7jgr")
region = Rect2(0, 180, 70, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_rupeb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeqak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmjoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiln0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c56y6")
}],
"loop": true,
"name": &"Attack_Frames",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsqh6")
}],
"loop": false,
"name": &"attack_1",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhrdx")
}],
"loop": false,
"name": &"attack_2",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g28x")
}],
"loop": false,
"name": &"attack_3",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncedy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x44a2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncedy")
}],
"loop": true,
"name": &"dodge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlim1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vycf")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvt1v")
}],
"loop": true,
"name": &"parry_stance",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72cx5")
}],
"loop": true,
"name": &"parry_success",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b56c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52wv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3evuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w7yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qhjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcon1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meumu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4et6u")
}],
"loop": false,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_52hex"]
size = Vector2(7, 12)

[sub_resource type="Animation" id="Animation_1ru25"]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack_Frames"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/HBRight:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/HBLeft:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_vtlvl"]
resource_name = "Attack_2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack_Frames"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 2, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/HBRight:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/HBLeft:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_222nm"]
resource_name = "Attack_3"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack_Frames"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.38405, 3.14159, 6.28319]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/HBRight:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/HBLeft:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_13dif"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/HBRight:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/HBLeft:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D/Shotty:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(14.359, 7.49999)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnimatedSprite2D/Shotty:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AnimatedSprite2D/ShottyBlast:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pskkv"]
resource_name = "dodge"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dodge"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.311742, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.902555, 2.14687, 3.93666, 0.0]
}

[sub_resource type="Animation" id="Animation_xowcg"]
resource_name = "idle"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5m6tb"]
resource_name = "jump"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_on8rs"]
resource_name = "shotgun_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/Shotty:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(14.359, 7.49999), Vector2(25.1282, 26.25), Vector2(25.1282, 26.25), Vector2(14.359, 7.49999)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/Shotty:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.5708, 0.0, 0.0, -1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/ShottyBlast:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_hm6eq"]
resource_name = "walk"
length = 0.7785
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 1, 3, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qyq63"]
_data = {
"Attack": SubResource("Animation_1ru25"),
"Attack_2": SubResource("Animation_vtlvl"),
"Attack_3": SubResource("Animation_222nm"),
"RESET": SubResource("Animation_13dif"),
"dodge": SubResource("Animation_pskkv"),
"idle": SubResource("Animation_xowcg"),
"jump": SubResource("Animation_5m6tb"),
"shotgun_attack": SubResource("Animation_on8rs"),
"walk": SubResource("Animation_hm6eq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0g83a"]
resource_local_to_scene = true
size = Vector2(12.6984, 27.5918)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oupih"]
size = Vector2(14, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3ejd"]
size = Vector2(7, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efknh"]
size = Vector2(5, 20)

[node name="PC" type="CharacterBody2D" node_paths=PackedStringArray("health") groups=["player"]]
position = Vector2(0, 2)
collision_layer = 2
collision_mask = 3075
floor_snap_length = 2.0
script = ExtResource("1_x210m")
movement_data = ExtResource("2_4grev")
health = NodePath("Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.250015, -0.634098)
scale = Vector2(1.06323, 0.994939)
shape = SubResource("RectangleShape2D_pue1l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.749986, -2)
scale = Vector2(0.278571, 0.266667)
sprite_frames = SubResource("SpriteFrames_rupeb")
animation = &"run"
frame = 1
speed_scale = 0.16

[node name="Shotty" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = -1
position = Vector2(14.359, 7.49999)
rotation = -1.5708
scale = Vector2(0.15063, 0.146194)
texture = ExtResource("4_2ahp4")

[node name="ShottyBlast" type="Sprite2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(75.3847, 3.75)
scale = Vector2(0.0278843, 0.0238284)
texture = ExtResource("5_pvc8c")

[node name="Health" type="Node" parent="."]
script = ExtResource("4_q0gnn")
max_health = null
immortality = null

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-0.250014, -20)
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="HazardDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardDetector"]
position = Vector2(0.249986, 4)
shape = SubResource("RectangleShape2D_52hex")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ParryTimer" type="Timer" parent="."]
one_shot = true

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qyq63")
}

[node name="SMPC" type="Node" parent="."]
script = ExtResource("2_53mma")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="STATE" type="Label" parent="."]
offset_left = -20.0
offset_top = -31.0
offset_right = 20.0
offset_bottom = -8.0
text = "State"
metadata/_edit_use_anchors_ = true

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(5.74999, 3)
rotation = -0.398385
scale = Vector2(0.568679, 0.646948)
collision_layer = 64
collision_mask = 16
script = ExtResource("6_y7jp7")

[node name="HBRight" type="CollisionShape2D" parent="HitBox"]
light_mask = 0
position = Vector2(3.92367, -0.225409)
rotation = 0.398128
shape = SubResource("RectangleShape2D_0g83a")

[node name="HBLeft" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-22.0084, -9.81951)
rotation = 0.412371
shape = SubResource("RectangleShape2D_0g83a")
disabled = true

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 128
collision_mask = 12
script = ExtResource("9_s8nmr")
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-0.250014, -1)
shape = SubResource("RectangleShape2D_oupih")

[node name="ParryBox" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 24
script = ExtResource("8_7q1rp")

[node name="PBLeft" type="CollisionShape2D" parent="ParryBox"]
position = Vector2(6.24999, 0)
shape = SubResource("RectangleShape2D_e3ejd")
disabled = true

[node name="PBRight" type="CollisionShape2D" parent="ParryBox"]
position = Vector2(-7.75001, 0)
shape = SubResource("RectangleShape2D_efknh")
disabled = true

[connection signal="health_depleted" from="Health" to="." method="_on_health_health_depleted"]
[connection signal="area_entered" from="HazardDetector" to="." method="_on_hazard_detector_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="got_hit" from="HurtBox" to="." method="_on_hurt_box_got_hit"]
[connection signal="received_damage" from="HurtBox" to="." method="_on_hurt_box_received_damage"]
